<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Карта Google Maps -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Поиск по карте -->
    <AutoCompleteTextView
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        android:background="@android:color/white"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:elevation="4dp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_gravity="top"
        android:drawableEnd="@android:drawable/ic_menu_search"
        android:inputType="text" />

    <!-- Кнопки снизу по центру -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="28dp"
        android:padding="8dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_language"
            android:contentDescription="@string/choose_language"
            android:tint="@android:color/white"
            android:layout_marginEnd="16dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAssistant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chatgpt_logo"
            android:contentDescription="@string/ai_chat_title"
            android:tint="@android:color/white"
            android:layout_marginEnd="16dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:contentDescription="@string/exit"
            android:tint="@android:color/white" />
    </LinearLayout>
</FrameLayout>
